Closed
Bug 581072
Opened 16 years ago
Closed 16 years ago
Timeouts fire too early if suspended and then resumed
Categories
(Core :: DOM: Core & HTML, defect)
Tracking
()
RESOLVED
FIXED
mozilla2.0b3
| Tracking | Status | |
|---|---|---|
| blocking2.0 | --- | beta3+ |
People
(Reporter: bzbarsky, Assigned: bzbarsky)
References
(Blocks 1 open bug)
Details
(Keywords: dev-doc-complete)
Attachments
(1 file)
|
5.26 KB,
patch
|
jst
:
review+
jst
:
approval2.0+
|
Details | Diff | Splinter Review |
This is a regression from bug 558306. I switched the sign on the subtraction when suspending timers, so instead of setting a positive delay we set a negative one, and then the timers fire too early, of course.
Fix coming up.
| Assignee | ||
Comment 2•16 years ago
|
||
Attachment #459496 -
Flags: review?(jst)
Attachment #459496 -
Flags: approval2.0?
| Assignee | ||
Updated•16 years ago
|
blocking2.0: --- → beta3+
Updated•16 years ago
|
Attachment #459496 -
Flags: review?(jst)
Attachment #459496 -
Flags: review+
Attachment #459496 -
Flags: approval2.0?
Attachment #459496 -
Flags: approval2.0+
| Assignee | ||
Comment 3•16 years ago
|
||
Status: NEW → RESOLVED
Closed: 16 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
Target Milestone: --- → mozilla2.0b3
| Assignee | ||
Comment 4•15 years ago
|
||
We should probably document the new API added here:
3.16 +
3.17 + /**
3.18 + * Suspend/resume timeouts on this window and its descendant windows.
3.19 + */
3.20 + void suspendTimeouts();
3.21 + void resumeTimeouts();
on nsIDOMWindowUtils.
Keywords: dev-doc-needed
Comment 5•15 years ago
|
||
bz, you win bonus points for specifically listing the items that need documenting.
The new methods have been documented:
https://developer.mozilla.org/en/XPCOM_Interface_Reference/nsIDOMWindowUtils
Keywords: dev-doc-needed → dev-doc-complete
| Assignee | ||
Comment 6•15 years ago
|
||
Well, without listing them the bug gave no idea of what the new stuff is, right? ;)
Updated•7 years ago
|
Component: DOM → DOM: Core & HTML
You need to log in
before you can comment on or make changes to this bug.
Description
•