Bug 581072.  Fix the handling of long timeouts across timeout suspend/resume and add APIs to suspend/resume timeouts from trusted script.  r=jst